# freeread

./: README.md  freeread.py  legacy_freeread.py  pyproject.toml
freeread/: cli.py
